--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.20.1",
     "mongoose": "^5.0.0-rc1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -10,6 +11,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-router-transition": "^1.1.3",
     "react-scripts": "1.0.17",
     "react-spinkit": "^3.0.0",
     "redux": "^3.7.2",
