--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-transition": "^1.1.3",
     "react-scripts": "1.0.17",
     "react-spinkit": "^3.0.0",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
