--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^5.0.0-rc1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-modal": "^3.1.10",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
