--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-router-transition": "^1.1.3",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "3.0.1",
     "react-spinkit": "^3.0.0",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
